--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
@@ -1,10 +1,19 @@
 <Control xmlns="https://spacestation14.io">
-    <GridContainer Columns="2">
-        <TextureRect Name="View"
-                     Margin="0,0,4,0"
-                     MinSize="48 48"
-                     HorizontalAlignment="Left"
-                     Stretch="KeepAspectCentered"/>
-        <Label Name="ProductName"/>
-    </GridContainer>
+    <Button Name="ProductButton">
+        <GridContainer Columns="2">
+            <GridContainer Rows="2">
+                <TextureRect Name="View"
+                             Margin="0,0,4,0"
+                             MinSize="48 48"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Top"
+                             Stretch="KeepAspectCentered"/>
+                <BoxContainer Name="PriceHolder"/>
+            </GridContainer>
+            <GridContainer Rows="2">
+                <RichTextLabel Name="ProductName" Access="Public" StyleClasses="LabelHeading"/>
+                <RichTextLabel Name="ProductDesc" Access="Public"/>
+            </GridContainer>
+        </GridContainer>
+    </Button>
 </Control>
