--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
@@ -1,5 +1,4 @@
 <DefaultWindow xmlns="https://spacestation14.io"
-               xmlns:graphics="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
                xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                Title="{Loc 'cp14-store-ui-title'}"
                MinSize="700 600">
@@ -11,6 +10,24 @@
                 <ScrollContainer HorizontalExpand="True" VerticalExpand="True" MinSize="0 200">
                     <BoxContainer Name="ProductsContainer" Orientation="Vertical" HorizontalExpand="True"/>
                 </ScrollContainer>
+                <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 10 0">
+                    <controls:StripeBack>
+                        <PanelContainer>
+                            <Label Text="{Loc 'cp14-store-ui-order'}" Align="Center" Margin="0 5 0 3"/>
+                        </PanelContainer>
+                    </controls:StripeBack>
+                    <!-- Cash -->
+                    <GridContainer Columns="2" HorizontalExpand="True" Margin="0, 10, 0, 0">
+                        <BoxContainer Orientation="Vertical" HorizontalAlignment="Center">
+                            <RichTextLabel Text="{Loc 'cp14-store-ui-cash'}" HorizontalAlignment="Center" StyleClasses="LabelHeading"/>
+                            <BoxContainer Name="CashPriceHolder"/>
+                        </BoxContainer>
+                        <BoxContainer Orientation="Vertical" HorizontalAlignment="Center">
+                            <RichTextLabel Text="{Loc 'cp14-store-ui-price'}" HorizontalAlignment="Center" StyleClasses="LabelHeading"/>
+                            <BoxContainer Name="PricePriceHolder"/>
+                        </BoxContainer>
+                    </GridContainer>
+                </BoxContainer>
             </GridContainer>
         </BoxContainer>
     </BoxContainer>
