setup billboard timer

--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
@@ -27,6 +27,8 @@
                             <BoxContainer Name="PricePriceHolder"/>
                         </BoxContainer>
                     </GridContainer>
+                    <!-- Time -->
+                    <Label Name="TravelTimeLabel" Text="00:00" HorizontalAlignment="Center" HorizontalExpand="True" Margin="0 15 0 0"/>
                 </BoxContainer>
             </GridContainer>
         </BoxContainer>
