--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreWindow.xaml
@@ -1,15 +1,21 @@
 <DefaultWindow xmlns="https://spacestation14.io"
                xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                Title="{Loc 'cp14-store-ui-title'}"
-               MinSize="700 600">
+               MinSize="800 600">
     <BoxContainer Orientation="Vertical">
         <!-- Main -->
         <BoxContainer HorizontalExpand="True" VerticalExpand="True" Orientation="Horizontal">
             <GridContainer HorizontalExpand="True" VerticalExpand="True" Columns="2">
-                <!-- Product list -->
-                <ScrollContainer HorizontalExpand="True" VerticalExpand="True" MinSize="0 200">
-                    <BoxContainer Name="ProductsContainer" Orientation="Vertical" HorizontalExpand="True"/>
-                </ScrollContainer>
+                <!-- Product list (left side UI) -->
+                <TabContainer Name="Tabs" HorizontalExpand="True" VerticalExpand="True" MinSize="0 200">
+                    <ScrollContainer HorizontalExpand="True" VerticalExpand="True" MinSize="0 200">
+                        <BoxContainer Name="BuyProductsContainer" Orientation="Vertical" HorizontalExpand="True"/>
+                    </ScrollContainer>
+                    <ScrollContainer HorizontalExpand="True" VerticalExpand="True" MinSize="0 200">
+                        <BoxContainer Name="SellProductsContainer" Orientation="Vertical" HorizontalExpand="True"/>
+                    </ScrollContainer>
+                </TabContainer>
+                <!-- Station trading data (right side UI) -->
                 <BoxContainer Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="0 0 10 0">
                     <controls:StripeBack>
                         <PanelContainer>
@@ -17,16 +23,10 @@
                         </PanelContainer>
                     </controls:StripeBack>
                     <!-- Cash -->
-                    <GridContainer Columns="2" HorizontalExpand="True" Margin="0, 10, 0, 0">
-                        <BoxContainer Orientation="Vertical" HorizontalAlignment="Center">
-                            <RichTextLabel Text="{Loc 'cp14-store-ui-cash'}" HorizontalAlignment="Center" StyleClasses="LabelHeading"/>
-                            <BoxContainer Name="CashPriceHolder"/>
-                        </BoxContainer>
-                        <BoxContainer Orientation="Vertical" HorizontalAlignment="Center">
-                            <RichTextLabel Text="{Loc 'cp14-store-ui-price'}" HorizontalAlignment="Center" StyleClasses="LabelHeading"/>
-                            <BoxContainer Name="PricePriceHolder"/>
-                        </BoxContainer>
-                    </GridContainer>
+                    <BoxContainer Orientation="Vertical" HorizontalAlignment="Center" HorizontalExpand="True" Margin="0, 10, 0, 0">
+                        <RichTextLabel Text="{Loc 'cp14-store-ui-cash'}" HorizontalAlignment="Center" StyleClasses="LabelHeading"/>
+                        <BoxContainer Name="CashPriceHolder"/>
+                    </BoxContainer>
                     <!-- Time -->
                     <Label Name="TravelTimeLabel" Text="00:00" HorizontalAlignment="Center" HorizontalExpand="True" Margin="0 15 0 0"/>
                 </BoxContainer>
