--- a/Content.Client/_CP14/Options/CP14OptionsMenuMainTab.xaml
+++ b/Content.Client/_CP14/Options/CP14OptionsMenuMainTab.xaml
@@ -16,9 +16,9 @@
                 <Label Text="{Loc 'cp14-ui-options-main-graphics-label'}"
                        StyleClasses="LabelKeyText"/>
 
-                <!-- CP14 Wave shader settings -->
                 <CheckBox Name="WaveShaderEnabled"
                     Text="{Loc 'cp14-ui-options-main-graphics-wave-shader'}"/>
+                    <!-- TODO: Wave shader tooltip -->
                 <CheckBox Name="PostProcessCheckBox"
                     Text="{Loc 'cp14-ui-options-postprocess'}"
                     ToolTip="{Loc 'cp14-ui-options-postprocess-tooltip'}"/>
