--- a/Content.Client/_CP14/Workbench/CP14WorkbenchRecipeControl.xaml
+++ b/Content.Client/_CP14/Workbench/CP14WorkbenchRecipeControl.xaml
@@ -1,10 +1,18 @@
 ﻿<Control xmlns="https://spacestation14.io">
     <GridContainer Columns="2">
+        <EntityPrototypeView Name="EntityView"
+                             Margin="0,0,4,0"
+                             MinSize="48 48"
+                             MaxSize="48 48"
+                             Scale="2,2"
+                             HorizontalAlignment="Center"
+                             VerticalExpand="True"/>
         <TextureRect Name="View"
-                     Margin="0,0,4,0"
-                     MinSize="48 48"
-                     HorizontalAlignment="Left"
-                     Stretch="KeepAspectCentered"/>
+                             Margin="0,0,4,0"
+                             MinSize="48 48"
+                             MaxSize="48 48"
+                             HorizontalAlignment="Left"
+                             Stretch="KeepAspectCentered"/>
         <Label Name="Name"/>
     </GridContainer>
 </Control>
