--- a/Content.Client/_CP14/Workbench/CP14WorkbenchRequirementControl.xaml
+++ b/Content.Client/_CP14/Workbench/CP14WorkbenchRequirementControl.xaml
@@ -4,6 +4,7 @@
             <EntityPrototypeView Name="View"
                                  Margin="0,0,4,0"
                                  MinSize="48 48"
+                                 MaxSize="48 48"
                                  Scale="2,2"
                                  HorizontalAlignment="Center"
                                  VerticalExpand="True"/>
