--- a/Content.Client/_CP14/Discord/DiscordAuthGui.xaml
+++ b/Content.Client/_CP14/Discord/DiscordAuthGui.xaml
@@ -1,4 +1,4 @@
-﻿<Control xmlns="https://spacestation14.io"
+<Control xmlns="https://spacestation14.io"
           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:parallax="clr-namespace:Content.Client.Parallax"
           xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls">
@@ -22,7 +22,7 @@
             </BoxContainer>
             <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
                 <Button Name="AuthorizeButton" Text="{Loc 'cp14-discord-auth-text'}" HorizontalExpand="True" StyleClasses="OpenRight" />
-                <Button Name="DiscordButton" Text="{Loc 'cp14-discord-auth-dlink'}" HorizontalExpand="True" StyleClasses="OpenRight" />
+                <Button Name="DiscordButton" Text="{Loc 'cp14-discord-auth-browser-btn'}" HorizontalExpand="True" StyleClasses="OpenRight" />
             </BoxContainer>
         </BoxContainer>
     </Control>
