--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
@@ -1,11 +1,18 @@
 <Control xmlns="https://spacestation14.io">
     <Button Name="ProductButton" Access="Public">
         <BoxContainer Orientation="Horizontal">
+            <EntityPrototypeView Name="EntityView"
+                                 MinSize="64 64"
+                                 MaxSize="64 64"
+                                 HorizontalAlignment="Left"
+                                 VerticalAlignment="Top"
+                                 Visible="False"/>
             <TextureRect Name="View"
                          MinSize="48 48"
                          HorizontalAlignment="Left"
                          VerticalAlignment="Top"
-                         Stretch="KeepAspectCentered" />
+                         Stretch="KeepAspectCentered"
+                         Visible="False"/>
             <BoxContainer Orientation="Vertical">
                 <RichTextLabel Name="SpecialLabel" Text="{Loc 'cp14-store-ui-tab-special'}" VerticalAlignment="Center" Access="Public" Visible="False" />
                 <RichTextLabel Name="ProductName" VerticalAlignment="Center" Access="Public" />
