--- a/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
+++ b/Content.Client/_CP14/TravelingStoreShip/CP14StoreProductControl.xaml
@@ -2,8 +2,9 @@
     <Button Name="ProductButton" Access="Public">
         <BoxContainer Orientation="Horizontal">
             <EntityPrototypeView Name="EntityView"
-                                 MinSize="64 64"
-                                 MaxSize="64 64"
+                                 MinSize="48 48"
+                                 MaxSize="48 48"
+                                 Scale="2,2"
                                  HorizontalAlignment="Left"
                                  VerticalAlignment="Top"
                                  Visible="False"/>
